tests/ui/borrowck/super-let-in-if-block.stderr
error[E0597]: `temp` does not live long enough
  --> $DIR/super-let-in-if-block.rs:22:9
   |
LL |     std::convert::identity(if true {
   |     ---------------------- borrow later used by call
LL |         super let temp = ();
   |                   ---- binding `temp` declared here
LL |         &temp
   |         ^^^^^ borrowed value does not live long enough
LL |
LL |     } else {
   |     - `temp` dropped here while still borrowed

error[E0597]: `temp` does not live long enough
  --> $DIR/super-let-in-if-block.rs:26:9
   |
LL |     std::convert::identity(if true {
   |     ---------------------- borrow later used by call
...
LL |         super let temp = ();
   |                   ---- binding `temp` declared here
LL |         &temp
   |         ^^^^^ borrowed value does not live long enough
LL |
LL |     });
   |     - `temp` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
